Exception classes are created, started to seperating service methods to different service class according to ajax or query.